added procedure to float-to-hex

--- a/floatingpoint/index.html
+++ b/floatingpoint/index.html
@@ -122,6 +122,7 @@
                         <button type="button" class="btn button mb-3" onclick="floattohex()">Submit</button>
                     </td>
                     <td style="width: 55%; vertical-align: top;">
+                        <div id="hex-proc"></div>
                         <div id="hex-result"></div>
                     </td>
                 </tr>
