added procedure for float-to-hex

--- a/floatingpoint/index.html
+++ b/floatingpoint/index.html
@@ -119,11 +119,12 @@
                             </div>
                             <input type="text" class="form-control" value="23" id="mantissa2">
                         </div>
-                        <button type="button" class="btn button mb-3" onclick="floattohex()">Submit</button>
+                        <button type="button" class="btn button mb-3" onclick="floattohex()">Submit</button><br>
+                        <input type="checkbox" id="procedure-hex"> Display Procedure
                     </td>
                     <td style="width: 55%; vertical-align: top;">
-                        <div id="hex-proc"></div>
                         <div id="hex-result"></div>
+                        <div id="hex-proc"></div>
                     </td>
                 </tr>
             </table>
